--- a/frontend/index.html
+++ b/frontend/index.html
@@ -122,7 +122,7 @@
                             <p class="card-text">A personal portfolio site with a custom backend for user engagement, showcasing my full-stack capabilities. Displays projects, skills, and offers a direct messaging feature for visitors.</p>
                             <div class="d-flex gap-3 mt-auto">
                                 <a href="#" class="btn btn-primary">Visit</a>
-                                <a href="#" class="btn btn-primary">Github</a>
+                                <a href="https://github.com/sibun77/shibabrata_portfolio/" class="btn btn-primary">Github</a>
                             </div>
                         </div>
                     </div>
