adding favicon to frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shibabrata</title>
+    <!-- favicon -->
+     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+    <!-- css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- BootStrap CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css">
@@ -82,7 +85,7 @@
     <!-- Projects -->
     <section id="projects">
         <div class="container-fluid container-lg ">
-            <h2 class="text-center my-5">Projects</h2>
+            <h2 class="text-center my-5">My Projects</h2>
             <div class="row g-4 justify-content-center mt-2">
                 <div class="col-sm-6 col-md-4 d-flex  justify-content-center  ">
                     <div class="card" style="width: 18rem;">
@@ -108,8 +111,8 @@
                                 for any city using a third-party API. Users can search for current conditions,
                                 temperature, and forecasts, providing instant, accurate meteorological insights.</p>
                             <div class="d-flex gap-3 mt-auto">
-                                <a href="https://my-weather-app-five-topaz.vercel.app/" class="btn btn-primary">Visit</a>
-                                <a href="https://github.com/sibun77/my-weather-app" class="btn btn-primary">Github</a>
+                                <a href="https://my-weather-app-five-topaz.vercel.app/" target="_blank" class="btn btn-primary">Visit</a>
+                                <a href="https://github.com/sibun77/my-weather-app" target="_blank" class="btn btn-primary">Github</a>
                             </div>
                         </div>
                     </div>
@@ -122,7 +125,7 @@
                             <p class="card-text">A personal portfolio site with a custom backend for user engagement, showcasing my full-stack capabilities. Displays projects, skills, and offers a direct messaging feature for visitors.</p>
                             <div class="d-flex gap-3 mt-auto">
                                 <a href="#" class="btn btn-primary">Visit</a>
-                                <a href="#" class="btn btn-primary">Github</a>
+                                <a href="https://github.com/sibun77/shibabrata_portfolio/" target="_blank" class="btn btn-primary">Github</a>
                             </div>
                         </div>
                     </div>
@@ -229,15 +232,15 @@
                     <form class="p-4 border rounded bg-light" onsubmit="handleForm(event)">
                         <div class="mb-3">
                             <label for="name" class="form-label">Full Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="Tony Stark" required>
+                            <input type="text" class="form-control" id="name" placeholder="Tony Stark" >
                         </div>
                         <div class="mb-3">
                             <label for="email" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
+                            <input type="email" class="form-control" id="email" placeholder="name@example.com" >
                         </div>
                         <div class="mb-3">
                             <label for="message" class="form-label">Message</label>
-                            <textarea class="form-control" id="message" rows="3" required></textarea>
+                            <textarea class="form-control" id="message" rows="3" ></textarea>
                         </div>
                         <div class="md-3">
                             <!-- <button class="btn btn-primary w-100">Send Message</button> -->
