--- a/frontend/index.html
+++ b/frontend/index.html
@@ -77,6 +77,7 @@
                         <li><strong>Location:</strong> Jajpur, India</li>
                         <li><strong>Email:</strong> Shibabrataj7@gmail.com</li>
                         <li><strong>Education:</strong> Master of Computer Applications (MCA)</li>
+                        <li><strong>Resume:</strong> <a href="./resume/Shibabrata_Jena_Resume.pdf">ShibabrataResume</a></li>
                     </ul>
                 </div>
             </div>
@@ -229,7 +230,7 @@
                     </div>
                 </div>
                 <div class="col-md-7 py-3">
-                    <form class="p-4 border rounded bg-light" onsubmit="handleForm(event)">
+                    <form id="contactForm" class="p-4 border rounded bg-light" onsubmit="handleForm(event)">
                         <div class="mb-3">
                             <label for="name" class="form-label">Full Name</label>
                             <input type="text" class="form-control" id="name" placeholder="Tony Stark" >
@@ -259,9 +260,10 @@
         <p>&copy; 2025 Shibabrata Jena | All rights reserved</p>
     </footer>
 
-    <script src="js/script.js"></script>
     <!-- bootstrap cdn js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- local js -->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
