add 2 new project in project section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shibabrata</title>
     <!-- favicon -->
-     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <!-- css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- BootStrap CDN -->
@@ -77,7 +77,8 @@
                         <li><strong>Location:</strong> Jajpur, India</li>
                         <li><strong>Email:</strong> Shibabrataj7@gmail.com</li>
                         <li><strong>Education:</strong> Master of Computer Applications (MCA)</li>
-                        <li><strong>Resume:</strong> <a href="./resume/Shibabrata_Jena_Resume.pdf">ShibabrataResume</a></li>
+                        <li><strong>Resume:</strong> <a href="./resume/Shibabrata_Jena_Resume.pdf">ShibabrataResume</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -88,6 +89,49 @@
         <div class="container-fluid container-lg ">
             <h2 class="text-center my-5">My Projects</h2>
             <div class="row g-4 justify-content-center mt-2">
+                <div class="col-sm-6 col-md-4 d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./images/project5.png" class="card-img-top" alt="Chat App">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">Real-Time Chat App</h5>
+                            <p class="card-text">
+                                A real-time chat application built with the MERN stack and WebSockets.
+                                Supports instant messaging between users, secure authentication, and
+                                a responsive UI for seamless conversations. Showcases full-stack
+                                development with live data updates.
+                            </p>
+                            <div class="d-flex gap-3 mt-auto">
+                                <a href="https://chat-app-vert-eight-37.vercel.app/" target="_blank"
+                                    class="btn btn-primary">Visit</a>
+                                <a href="https://github.com/sibun77/chat-app" target="_blank"
+                                    class="btn btn-primary">Github</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./images/project6.png" class="card-img-top" alt="MERN Auth Project">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">MERN Authentication App</h5>
+                            <p class="card-text">
+                                A secure authentication system built with the MERN stack. Features include user
+                                registration, login,
+                                email verification, password reset with OTP, and JWT-based session handling using
+                                cookies.
+                                Designed with robust backend validation and a responsive frontend for smooth user
+                                experience.
+                            </p>
+                            <div class="d-flex gap-3 mt-auto">
+                                <a href="https://mern-auth-indol-beta.vercel.app/" target="_blank"
+                                    class="btn btn-primary">Visit</a>
+                                <a href="https://github.com/sibun77/mern-auth" target="_blank"
+                                    class="btn btn-primary">Github</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-sm-6 col-md-4 d-flex  justify-content-center  ">
                     <div class="card" style="width: 18rem;">
                         <img src="./images/project1.png" class="card-img-top" alt="...">
@@ -97,8 +141,10 @@
                                 management. Users can add, edit, mark as complete, and delete tasks seamlessly, offering
                                 a clear and intuitive way to stay organized.</p>
                             <div class="d-flex gap-3 mt-auto ">
-                                <a href="https://my-todo-app-three-zeta.vercel.app/" target="_blank" class="btn btn-primary ">Visit</a>
-                                <a href="https://github.com/sibun77/MyTodo-App" target="_blank" class="btn btn-primary">Github</a>
+                                <a href="https://my-todo-app-three-zeta.vercel.app/" target="_blank"
+                                    class="btn btn-primary ">Visit</a>
+                                <a href="https://github.com/sibun77/MyTodo-App" target="_blank"
+                                    class="btn btn-primary">Github</a>
                             </div>
                         </div>
                     </div>
@@ -112,8 +158,10 @@
                                 for any city using a third-party API. Users can search for current conditions,
                                 temperature, and forecasts, providing instant, accurate meteorological insights.</p>
                             <div class="d-flex gap-3 mt-auto">
-                                <a href="https://my-weather-app-five-topaz.vercel.app/" target="_blank" class="btn btn-primary">Visit</a>
-                                <a href="https://github.com/sibun77/my-weather-app" target="_blank" class="btn btn-primary">Github</a>
+                                <a href="https://my-weather-app-five-topaz.vercel.app/" target="_blank"
+                                    class="btn btn-primary">Visit</a>
+                                <a href="https://github.com/sibun77/my-weather-app" target="_blank"
+                                    class="btn btn-primary">Github</a>
                             </div>
                         </div>
                     </div>
@@ -123,10 +171,13 @@
                         <img src="./images/project3.png" class="card-img-top" alt="...">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">Personal Portfolio</h5>
-                            <p class="card-text">A personal portfolio site with a custom backend for user engagement, showcasing my full-stack capabilities. Displays projects, skills, and offers a direct messaging feature for visitors.</p>
+                            <p class="card-text">A personal portfolio site with a custom backend for user engagement,
+                                showcasing my full-stack capabilities. Displays projects, skills, and offers a direct
+                                messaging feature for visitors.</p>
                             <div class="d-flex gap-3 mt-auto">
                                 <a href="#" class="btn btn-primary">Visit</a>
-                                <a href="https://github.com/sibun77/shibabrata_portfolio/" target="_blank" class="btn btn-primary">Github</a>
+                                <a href="https://github.com/sibun77/shibabrata_portfolio/" target="_blank"
+                                    class="btn btn-primary">Github</a>
                             </div>
                         </div>
                     </div>
@@ -218,10 +269,12 @@
                         </p>
                     </div>
                     <div class="mt-3 ">
-                        <a href="https://www.linkedin.com/in/shibabrata-jena-473bb0213/" target="_blank" class="ms-3 text-decoration-none">
+                        <a href="https://www.linkedin.com/in/shibabrata-jena-473bb0213/" target="_blank"
+                            class="ms-3 text-decoration-none">
                             <i class="fa-brands fa-linkedin fa-2xl" style="color: #0a66c2;"></i>
                         </a>
-                        <a href="https://www.youtube.com/@myodiacreation4506" target="_blank" class="ms-3 text-decoration-none">
+                        <a href="https://www.youtube.com/@myodiacreation4506" target="_blank"
+                            class="ms-3 text-decoration-none">
                             <i class="fa-brands fa-youtube fa-2xl" style="color: #ff0033;"></i>
                         </a>
                         <a href="https://github.com/sibun77" target="_blank" class="ms-3 text-decoration-none">
@@ -233,15 +286,15 @@
                     <form id="contactForm" class="p-4 border rounded bg-light" onsubmit="handleForm(event)">
                         <div class="mb-3">
                             <label for="name" class="form-label">Full Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="Tony Stark" >
+                            <input type="text" class="form-control" id="name" placeholder="Tony Stark">
                         </div>
                         <div class="mb-3">
                             <label for="email" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="email" placeholder="name@example.com" >
+                            <input type="email" class="form-control" id="email" placeholder="name@example.com">
                         </div>
                         <div class="mb-3">
                             <label for="message" class="form-label">Message</label>
-                            <textarea class="form-control" id="message" rows="3" ></textarea>
+                            <textarea class="form-control" id="message" rows="3"></textarea>
                         </div>
                         <div class="md-3">
                             <!-- <button class="btn btn-primary w-100">Send Message</button> -->
